Update title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to Arya Muralidharan's GitHub homepage!
-description: Someday, I will add things here :)
+title: Arya Muralidharan's homepage
+description: Under construction.
