--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Arya Muralidharan's homepage
-description: Under construction.
+title: Welcome!
+description: Arya Muralidharan's GitHub Homepage.
