--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ navbar:
   title: "Navigation"
   left: 
   - text: "NBA Name Chains"
-  href: https://arya-muralidharan.github.io/name-chains/
+  href: /name-chains/
