--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 theme: jekyll-theme-cayman
 title: Welcome!
 description: Arya Muralidharan's GitHub Homepage.
-navbar:
-  title: "Navigation"
-  left: 
-  - text: "NBA Name Chains"
-  href: /name-chains/
+
+<i>Under construction.</i>
