--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-cayman
-title: Welcome!
-description: Arya Muralidharan's GitHub Homepage.
+title: Arya Muralidharan's GitHub Homepage
