--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: Arya Muralidharan's GitHub Homepage
+title: Bright Colors, Green Summers, Sunny Days
+description: Arya Muralidharan's GitHub Homepage
