--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Bright Colors, Green Summers, Sunny Days
+title: Bright Colors, Green Summers, \nSunny Days
 description: Arya Muralidharan's GitHub Homepage
