--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
-title: Bright Colors, Green Summers, \nSunny Days
+title: >- 
+  Bright Colors, Green Summers, 
+  Sunny Days
 description: Arya Muralidharan's GitHub Homepage
