--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: >- 
+title: |
   Bright Colors, Green Summers, 
   Sunny Days
 description: Arya Muralidharan's GitHub Homepage
